package com.ferhatminder.stocks.util

object TestTags {
    const val SAVE_EDIT_STOCKS = "save_edit_stocks"
    const val CANCEL_EDIT_STOCKS = "cancel_edit_stocks"
    const val EDIT_STOCKS = "edit_stocks"
    const val SCREEN_TRACKED_STOCKS = "screen_tracked_stocks"
    const val SCREEN_STOCKS = "screen_stocks"
}