<resources>
    <string name="app_name">Stocks</string>
    <string name="tab_title_tracked_stocks">Tracked Stocks</string>
    <string name="tab_title_stocks">Stocks</string>
</resources>